# create_ai_foundry

./: .gitignore  .pre-commit-config.yaml  AUTO_CREATED_RESOURCES.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  LICENSE  PYRIT_GUIDE.md  QUICK_REFERENCE.md  README.md  ai_foundry_deployment_summary.json  ai_foundry_validation_report.json  audit-report.json  create-ai-foundry-project.py  deployment-summary.py  dev-requirements.txt  pyproject.toml  quick-resource-check.py  requirements.txt  validate-ai-foundry-deployment.py  validate-keyvault-access.py  validate_pipeline.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: __init__.py  test_placeholder.py
